--- a/01-basics/03-MarkedList/index.html
+++ b/01-basics/03-MarkedList/index.html
@@ -11,8 +11,7 @@
     </style>
   </head>
   <body>
-    <div id="app" style="margin-top: 2rem">
-    </div>
+    <div id="app" style="margin-top: 2rem"></div>
 
     <script type="module" src="./script.js"></script>
   </body>
