--- a/01-basics/02-VueCalculator/index.html
+++ b/01-basics/02-VueCalculator/index.html
@@ -28,8 +28,7 @@
   </head>
 
   <body>
-    <div id="app" class="container">
-    </div>
+    <div id="app" class="container"></div>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
