--- a/01-basics/04-MeetupTitle/index.html
+++ b/01-basics/04-MeetupTitle/index.html
@@ -5,8 +5,7 @@
     <title>MeetupTitle</title>
   </head>
   <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
 
     <script type="module" src="./script.js"></script>
   </body>
